--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
     transform: translateX(-50%);
     z-index: 10;
     font-size: 64px;
-    color: #e6f5ff;
+    color: #d84b20;
     text-shadow:
         0 0 12px #ffffff,
         0 0 35px #b8eaff,
@@ -78,7 +78,7 @@ body {
 .banner-illustration-right {
     position: absolute;
     bottom: 0;
-    width: 130px; /* kleiner */
+    width: 100px; /* kleiner */
     opacity: 0.9;
     filter: drop-shadow(0 0 22px rgba(230, 230, 255, 0.4)) brightness(1.1);
     z-index: 4;
@@ -99,7 +99,7 @@ body {
 
 .btn {
     position: relative;
-    background: rgba(5, 35, 80, 0.7);
+   background: #0a1f4a;                /* dunkelblau */
     border: 2px solid rgba(255,255,255,0.6);
     color: white;
     padding: 10px 20px;
