--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
     color: white;
     overflow: hidden;
 
-    background: url("fon5.png") center/cover no-repeat;
+    background: url("fon.png") center/cover no-repeat;
 }
 
 /* Луна */
