--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ createSlowSnow();
     <img src="veljesik2.png" class="banner-illustration-left" alt="">
     <img src="petrunja2.png" class="banner-illustration-right" alt="">
 
-    <h1 class="banner-title">Зимние приключения в тайге</h1>
+    <h1 class="banner-title">Тайна Шерстяного Носка.Зима</h1>
 
     <!-- Кнопки -->
     <div class="buttons">
@@ -276,21 +276,27 @@ createSlowSnow();
 <section>
     <h2>О книге</h2>
     <img src="Cover_Winter_Color.jpg" class="section-img" alt="Обложка книги" />
-    <p>«Заветная Мечта» — российская национальная премия...</p>
+    <p>Хотите понастольгировать и помечтать вместе с вашими детьми? 
+- Читайте про новогодние приключения Дениски и его друзей! Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса. Чтение о зимних приключениях десятилетних ребят  — это возможность вернуться в своё собственное детство, когда магия была реальностью, а мечты — осязаемыми. Эта история о дружбе, поддержке и о том, как важно оставаться верным себе и своим близким, помогает не только детям учиться важным жизненным урокам, но и взрослым вспомнить о самых главных ценностях. Воссоединитесь со своими детьми через сказку, подарите себе и им моменты настоящего волшебства и тепла в мире, где каждый из нас может снова поверить в чудеса и в себя.</p>
 </section>
 
 <!-- О ПРЕМИИ -->
 <section>
     <h2>О премии «Заветная Мечта»</h2>
     <img src="award.jpeg" class="section-img" alt="Премия Заветная Мечта" />
-    <p>Премия «Заветная Мечта» присуждается лучшим авторам...</p>
+    <p>«Заветная мечта» — российская национальная премия в области детской литературы. Учреждена в 2005 году Детским благотворительным фондом «Заветная мечта» . Вручалась с 2006 по 2009 год.</p>
 </section>
 
 <!-- ОБ АВТОРЕ -->
 <section>
     <h2>Об авторе</h2>
     <img src="authorfoto1.jpg" class="author-photo" alt="Автор книги" />
-    <p>Здесь можно разместить информацию об авторе...</p>
+    <p>Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность
+пересказывать истории, написанные жизнью, она, вероятно, унаследовала от своей
+прабабушки Ольги Сергеевны, которую в ее тесном окружении называли «Чехов в юбке».
+Василиса Сабашникова живет в Германии и пишет для взрослых и детей.
+В 2006 году Василиса стала финалистом Национальной детской литературной премии.
+В 2007 году – одним из победителей Европейского фестиваля на лучший русский язык в Санкт-Петербурге.</p>
 </section>
 
 </body>
