--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
     padding: 160px 20px 180px;
     text-align: center;
     overflow: hidden;
-    background: url("fon.png") center/cover no-repeat;
+    background: url("fon1.png") center/cover no-repeat;
     color: white;
 }
 
