--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
     padding: 160px 20px 180px;
     text-align: center;
     overflow: hidden;
-    background: url("fon1.png") center/cover no-repeat;
+    background: url("fon5.png") center/cover no-repeat;
     color: white;
 }
 
@@ -46,16 +46,16 @@ body {
 /* ТИТУЛ */
 .banner-title {
     position: absolute;
-    top: 55px;
-    left: 50%;
+    top: 160px;       /* опустили ниже */
+    left: 52%;        /* чуть вправо от луны */
     transform: translateX(-50%);
     z-index: 10;
     font-size: 64px;
-    color: #d84b20;
+    color: #ffffff;
     text-shadow:
-        0 0 12px #ffffff,
-        0 0 35px #b8eaff,
-        0 0 65px #aee0ff;
+        0 0 12px #000000,
+        0 0 30px #0d1d45,
+        0 0 60px #0d1d45;
 }
 
 .banner-title::after {
@@ -96,8 +96,8 @@ body {
 
 .btn {
     position: relative;
-    background: #0a1f4a;
-    border: 2px solid rgba(255,255,255,0.6);
+    background: rgba(10,25,75,0.65);
+    border: 1px solid rgba(255,255,255,0.4);
     color: white;
     padding: 10px 20px;
     border-radius: 14px;
@@ -107,11 +107,11 @@ body {
     align-items: center;
     gap: 10px;
     backdrop-filter: blur(4px);
-    box-shadow: 0 0 12px rgba(10,40,90,0.6);
+    box-shadow: 0 0 18px rgba(0,0,30,0.4);
     transition: 0.3s;
 }
 .btn:hover {
-    background: rgba(5, 35, 80, 0.9);
+    background: rgba(20,45,110,0.85);
     transform: translateY(-2px);
 }
 
@@ -127,6 +127,9 @@ section {
     margin: -20px auto 0;
     text-align: center;
     padding: 40px 20px;
+}
+    section p {
+    color: #0a1f4a; /* dunkles edles Blau */
 }
 
 .section-img {
@@ -148,16 +151,20 @@ h2 {
     font-size: 36px;
     color: #0d1540;
 }
+/* Textfarbe in Info-Blöcken */
+section p {
+    color: #0a1f4a;       /* Dunkelblau */
+    line-height: 1.7;
+}
 
 /* ================= СНЕГ (sichtbar) ================= */
 .slow-snow {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     pointer-events: none;
-    overflow: hidden;
     z-index: 99999;
 }
 
@@ -174,8 +181,11 @@ h2 {
 }
 
 @keyframes slowFall {
-    0% { transform: translateY(-10px); opacity: 1; }
-    100% { transform: translateY(110vh); opacity: 0.4; }
+    0% { transform: translateY(-100px); opacity: 1; }
+    100% { transform: translateY(120vh); opacity: 0.4; }
+.slow-snow { mix-blend-mode: normal; }
+.snowflake { background: rgba(255,255,255,0.8); }
+
 }
 @keyframes slowDrift {
     0% { transform: translateX(0); }
