--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Тайна Шерстяного Носка</title>
 
-<!-- ================= ШРИФТ ================= -->
 <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
 
-
-<!-- ================= СТИЛИ ================= -->
 <style>
 body {
     margin: 0;
@@ -27,28 +24,10 @@ body {
     color: white;
 }
 
-/* ЛУНА */
-.moon {
-    position: absolute;
-    top: 40px;
-    left: 30%;
-    transform: translateX(-50%);
-    width: 170px;
-    height: 170px;
-    background: radial-gradient(circle, #fff8d2 10%, #ffd973 45%, #c8a23b 70%, transparent 100%);
-    border-radius: 50%;
-    box-shadow:
-        0 0 60px 30px rgba(255, 225, 150, 0.55),
-        0 0 120px 70px rgba(255, 240, 180, 0.25);
-    z-index: 2;
-}
-
-/* ТИТУЛ */
+/* ТИТУЛ (без луны и без Зима) */
 .banner-title {
-    position: absolute;
-    top: 160px;
-    left: 52%;
-    transform: translateX(-50%);
+    margin-top: 40px;
+    position: relative;
     z-index: 10;
     font-size: 64px;
     color: #ffffff;
@@ -56,19 +35,6 @@ body {
         0 0 12px #000000,
         0 0 30px #0d1d45,
         0 0 60px #0d1d45;
-}
-
-.banner-title::after {
-    content: "";
-    position: absolute;
-    bottom: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 180%;
-    height: 80px;
-    background: radial-gradient(circle, rgba(255,255,255,0.8), rgba(255,255,255,0));
-    filter: blur(22px);
-    z-index: -1;
 }
 
 /* ================= ИЛЛЮСТРАЦИИ ================= */
@@ -81,13 +47,12 @@ body {
     filter: drop-shadow(0 0 22px rgba(230,230,255,0.4)) brightness(1.1);
     z-index: 4;
 }
-
 .banner-illustration-left { left: 2%; }
 .banner-illustration-right { right: 2%; }
 
 /* ================= КНОПКИ ================= */
 .buttons {
-    margin-top: 200px;
+    margin-top: 40px; /* jetzt direkt unter dem Titel */
     display: flex;
     justify-content: center;
     gap: 18px;
@@ -96,7 +61,6 @@ body {
 }
 
 .btn {
-    position: relative;
     background: rgba(10,25,75,0.65);
     border: 1px solid rgba(255,255,255,0.4);
     color: white;
@@ -147,7 +111,6 @@ section p {
     display: block;
 }
 
-/* GOLDENE SECTION HEADERS */
 h2 {
     font-size: 36px;
     color: #0d1540;
@@ -166,24 +129,24 @@ h2 {
 
 .snowflake {
     position: absolute;
-    top: -10px;
+    top: -20px;
     width: 14px;
     height: 14px;
     background: rgba(255,255,255,0.95);
     border-radius: 50%;
     opacity: 0.9;
-    filter: blur(0.8px);
+    filter: blur(1px);
     animation: slowFall linear infinite, slowDrift ease-in-out infinite;
 }
 
 @keyframes slowFall {
-    0% { transform: translateY(-100px); opacity: 1; }
-    100% { transform: translateY(120vh); opacity: 0.4; }
+    0%   { transform: translateY(-100px); opacity: 1; }
+    100% { transform: translateY(120vh); opacity: 0.3; }
 }
 
 @keyframes slowDrift {
-    0% { transform: translateX(0); }
-    50% { transform: translateX(40px); }
+    0%   { transform: translateX(0); }
+    50%  { transform: translateX(40px); }
     100% { transform: translateX(0); }
 }
 </style>
@@ -205,7 +168,7 @@ function createSlowSnow() {
 
         const size = 4 + Math.random() * 10;
         const left = Math.random() * 100;
-        const duration = 20 + Math.random() * 15;
+        const duration = 18 + Math.random() * 12;
         const delay = Math.random() * 20;
 
         flake.style.width = size + "px";
@@ -223,26 +186,23 @@ createSlowSnow();
 <!-- ================= БАННЕР ================= -->
 <header class="winter-banner">
 
-    <div class="moon"></div>
+    <!-- Mond gelöscht -->
 
     <img src="veljesik2.png.webp" class="banner-illustration-left" alt="">
     <img src="petrunja2.png.webp" class="banner-illustration-right" alt="">
 
-    <h1 class="banner-title">Тайна Шерстяного Носка.Зима</h1>
+    <h1 class="banner-title">Тайна Шерстяного Носка</h1>
 
-    <!-- КНОПКИ -->
     <div class="buttons">
-
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook</a>
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram</a>
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/youtube.svg">YouTube</a>
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/bookstack.svg">Купить eBook</a>
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/book.svg">Купить книгу</a>
-
     </div>
-</header>
 
+</header>
 
 <!-- ================= О КНИГЕ ================= -->
 <section>
