--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@ body {
 /* ================= БАННЕР ================= */
 .winter-banner {
     position: relative;
-    padding: 160px 20px 180px;
+    padding: 100px 20px 160px; /* подняли весь блок вверх */
     text-align: center;
     overflow: hidden;
     background: url("fon_new.webp") center/cover no-repeat;
     color: white;
 }
 
-/* ТИТУЛ (без луны и без Зима) */
+/* ТИТУЛ (перенесён выше на место луны) */
 .banner-title {
-    margin-top: 40px;
+    margin-top: 0;          /* раньше было 40px */
     position: relative;
     z-index: 10;
     font-size: 64px;
@@ -52,7 +52,7 @@ body {
 
 /* ================= КНОПКИ ================= */
 .buttons {
-    margin-top: 40px; /* jetzt direkt unter dem Titel */
+    margin-top: 40px; 
     display: flex;
     justify-content: center;
     gap: 18px;
@@ -93,6 +93,7 @@ section {
     text-align: center;
     padding: 40px 20px;
 }
+
 section p {
     color: #0a1f4a;
 }
@@ -186,7 +187,7 @@ createSlowSnow();
 <!-- ================= БАННЕР ================= -->
 <header class="winter-banner">
 
-    <!-- Mond gelöscht -->
+    <!-- Луна удалена полностью -->
 
     <img src="veljesik2.png.webp" class="banner-illustration-left" alt="">
     <img src="petrunja2.png.webp" class="banner-illustration-right" alt="">
@@ -203,7 +204,6 @@ createSlowSnow();
     </div>
 
 </header>
-
 <!-- ================= О КНИГЕ ================= -->
 <section>
     <h2>О книге</h2>
