--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ createSlowSnow();
     <img src="petrunja2.png.webp" class="banner-illustration-right" alt="">
 
     <h1 class="banner-title">Тайна Шерстяного Носка</h1>
+     <p> <h1 class="banner-title">Зима</h1></p>
 
     <div class="buttons">
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
