--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 <!-- CSS с анти-кэшем -->
 <link rel="stylesheet" href="styles.css?v=1">
 
+
+<!-- SNEE -->
+    
 <!-- Снег (JS) -->
 <script src="snow.js?v=1" defer></script>
 </head>
 
 <body>
+<!-- kleiner weißer Text oben rechts -->
+<div class="top-right-note">для совместного чтения с детьми 8–11 лет</div>
 
+    
 <!-- Снег -->
 <div class="slow-snow" id="slowSnow"></div>
 
@@ -63,6 +69,21 @@
 В 2006 году Василиса стала финалистом Национальной детской литературной премии.
 В 2007 году – одним из победителей Европейского фестиваля на лучший русский язык в Санкт-Петербурге.</p>
 </section>
+<!-- FOOTER -->
+<footer style="text-align:center; padding:40px 20px; color:#0a1f4a; font-size:18px;">
+
+    <p>
+        © 2024 Василиса Сабашникова.<br>
+        Тексты, персонажи и иллюстрации защищены авторским правом.
+    </p>
+
+    <p style="margin-top:20px;">
+        <a href="impressum.html" style="color:#0a1f4a;">Impressum</a> |
+        <a href="datenschutz.html" style="color:#0a1f4a;">Datenschutz</a>
+    </p>
+
+</footer>
 
 </body>
 </html>
+
