--- a/index.html
+++ b/index.html
@@ -19,19 +19,17 @@
 </head>
 
 <body>
-<!-- kleiner weißer Text oben rechts -->
-<div class="top-right-note">для совместного чтения с детьми 8–11 лет</div>
 
-    
 <!-- Снег -->
 <div class="slow-snow" id="slowSnow"></div>
 
 <header class="winter-banner">
 
-    <img src="veljesik2.png.webp" class="banner-illustration-left" alt="">
-    <img src="petrunja2.png.webp" class="banner-illustration-right" alt="">
+    <!-- kleiner weißer Text oben rechts -->
+    <div class="top-note">для совместного чтения с детьми 8–11 лет</div>
 
-    <h1 class="banner-title">Тайна Шерстяного Носка</h1>
+    <h1 class="banner-title">Тайна Шерстяного Носка. Зима</h1>
+
 
     <div class="buttons">
         <a href="#" class="btn"><img class="icon" src="https://simpleicons.org/icons/telegram.svg">Telegram</a>
