--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Тайна Шерстяного Носка</title>
+<title>Тайна Шерстяного Носка. Зима</title>
 
 <!-- Шрифт -->
 <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
@@ -41,6 +41,11 @@
     </div>
 
 </header>
+    <div style="text-align:center; margin-top:-40px;">
+    <img src="veljesik2.png.webp" class="banner-illustration-left">
+    <img src="petrunja2.png.webp" class="banner-illustration-right">
+</div>
+
 <!-- ================= О КНИГЕ ================= -->
 <section>
     <h2>О книге</h2>
